# inspirer-foundation

./: .gitignore  Cargo.toml  LICENSE  README.md
crypto-utils/: Cargo.toml
crypto-utils/src/: error.rs  lib.rs  p256.rs
inspirer-framework/: Cargo.toml
inspirer-framework/src/: app.rs  cli.rs  command.rs  config.rs  error.rs  lib.rs  logger.rs  response.rs  server.rs
inspirer-framework/src/component/: db.rs  mod.rs
inspirer-service-registry/: Cargo.toml
inspirer-services/inspirer-auth/: Cargo.toml
inspirer-services/inspirer-auth/auth-page/: package.json  pnpm-lock.yaml
inspirer-services/inspirer-auth/auth-page/src/: App.tsx
inspirer-services/inspirer-auth/migrations/: 20240405133413_initialize.down.sql  20240405133413_initialize.up.sql
inspirer-services/inspirer-auth/src/: app.rs  config.rs  header.rs  helper.rs  lib.rs  password.rs  token.rs
inspirer-services/inspirer-auth/src/auth/: application.rs  mod.rs  ocid.rs  user.rs
inspirer-services/inspirer-auth/src/command/: init.rs  list.rs  mod.rs
inspirer-services/inspirer-auth/src/controller/: auth.rs  mod.rs  oidc.rs
inspirer-services/inspirer-auth/src/controller/api/: mod.rs
inspirer-services/inspirer-auth/src/entity/: apps.rs  domains.rs  mod.rs  prelude.rs  users.rs
inspirer-services/inspirer-auth/src/service/: app.rs  init.rs  mod.rs  user.rs
src/: component.rs  error.rs  lib.rs  service.rs
src/axum/: app.rs  mod.rs  server.rs  service.rs
src/component/: config.rs  database.rs
