[package]
authors = ["Chongyi <xpz3847878@163.com>"]
description = "用于 Inspirer 的基础组件，提供了整个个人项目的必要基础支持"
edition = "2021"
keywords = ["inspirer"]
license = "Apache-2.0"
name = "inspirer-foundation"
readme = "README.md"
repository = "https://github.com/insptop/inspirer-foundation"
version = "0.3.1"

[dependencies]
async-trait = "0.1.52"
axum = {version = "0.4.8", optional = true}
config = "0.12.0"
libloading = {version = "0.7.3", optional = true}
log = "0.4.14"
sea-orm = {version = "0.6.0", default-features = false, features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"]}
serde = {version = "1.0.136", features = ["derive"]}
thiserror = "1.0.30"
tokio = {version = "1.16.1", features = ["sync", "signal"]}
type-map = "0.5.0"
validator = "0.14.0"
hyper = {version = "0.14"}
clap = { version = "3.1.5", features = ["derive"] }
tracing = {version = "0.1.32"}
tracing-appender = "0.2.1"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
daemonize-me = "1.0"

[features]
default = ["enable-axum"]
enable-axum = ["axum"]
app-ext = ["libloading"]
