[workspace]
members = ["inspirer-framework", ".", "inspirer-services/inspirer-auth", "crypto-utils"]

[workspace.package]
authors = ["Chongyi <xpz3847878@163.com>"]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
arc-swap = "1.6.0"
async-trait = "0.1.79"
axum = "0.7.5"
axum-extra = {version = "0.9.3", features = ["typed-header"]}
chrono = {version = "0.4.35", features = ["serde"]}
chrono-tz = "0.8.6"
clap = {version = "4.5.4", features = ["derive"]}
eyre = "0.6.12"
once_cell = "1.19.0"
regex = "1.10.3"
sea-orm = {version = "1.0.0-rc.3", features = [
  "sqlx-mysql",
  "runtime-tokio-rustls",
]}
serde = "1"
serde_json = "1"
thiserror = "1.0.31"
tower = "0.4.13"
tower-http = {version = "0.5.2", features = ["fs", "add-extension", "cors", "set-header", "compression-full", "trace", "catch-panic", "timeout"]}
tracing = "0.1.40"
utoipa = {version = "4.2.0", features = [
  "axum_extras",
  "url",
  "chrono",
  "uuid",
  "time",
]}
utoipa-swagger-ui = {version = "6.0.0", features = ["axum"]}
uuid = {version = "1", features = ["v4", "fast-rng", "macro-diagnostics"]}

[package]
authors.workspace = true
description = "用于 Inspirer 的基础组件，提供了整个个人项目的必要基础支持"
edition.workspace = true
keywords = ["inspirer"]
license.workspace = true
name = "inspirer-foundation"
readme = "README.md"
repository = "https://github.com/insptop/inspirer-foundation"
version = "0.4.0"

[dependencies]
async-trait = {workspace = true}
axum = {workspace = true}
