[workspace]
members = [
  "inspirer-framework",
  ".",
  "inspirer-services/inspirer-auth",
  "crypto-utils",
  "inspirer-service-registry",
]

[workspace.package]
authors = ["Chongyi <xpz3847878@163.com>"]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.7.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6.12"
once_cell = "1.20"
rand = { version = "0.8.5" }
regex = "1.11"
sea-orm = { version = "1", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
serde = "1"
serde_json = "1"
thiserror = "1"
tower = "0.5"
tower-http = { version = "0.6", features = [
  "fs",
  "add-extension",
  "cors",
  "set-header",
  "compression-full",
  "trace",
  "catch-panic",
  "timeout",
] }
tracing = "0.1.40"
url = { version = "2", features = ["serde"] }
utoipa = { version = "4.2.0", features = [
  "axum_extras",
  "url",
  "chrono",
  "uuid",
  "time",
] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
base64 = "0.22.1"

[package]
authors.workspace = true
description = "用于 Inspirer 的基础组件，提供了整个个人项目的必要基础支持"
edition.workspace = true
keywords = ["inspirer"]
license.workspace = true
name = "inspirer-foundation"
readme = "README.md"
repository = "https://github.com/insptop/inspirer-foundation"
version = "0.4.0"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
