[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "crypto-utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
der = "0.7.9"
ecdsa = "0.16.9"
p256 = {version = "0.13.2", features = ["pkcs8", "jwk"]}
pkcs8 = "0.10.2"
rand = {workspace = true}
serde_json = {workspace = true}
spki = "0.7.3"
thiserror = {workspace = true}
