[package]
edition.workspace = true
name = "inspirer-framework"
version = "0.1.0"

[dependencies]
async-trait = {workspace = true}
axum = {workspace = true}
backtrace_printer = "1.3.0"
clap = {workspace = true}
colored = "2.1.0"
config = "0.14.0"
daemonize = "0.5.0"
dialoguer = {version = "0.11"}
dotenvy = "0.15.7"
eyre = {workspace = true}
indicatif = {version = "0.17"}
once_cell = {workspace = true}
regex = {workspace = true}
sea-orm = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_variant = "0.1.2"
tera = "1.19.1"
thiserror = {workspace = true}
tokio = {version = "1.37.0", features = ["full"]}
tower = {workspace = true}
tower-http = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "json"]}
utoipa = {workspace = true}
