[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "inspirer-auth"
version = "0.1.0"

[[bin]]
name = "inspirer-auth"
path = "src/bin/server.rs"

[dependencies]
argon2 = {version = "0.5.3", features = ["std"]}
async-trait = {workspace = true}
axum = {workspace = true}
axum-extra = {workspace = true}
axum-macros = "0.4.1"
chrono = {workspace = true}
clap = {workspace = true}
eyre = {workspace = true}
headers = "0.4.0"
inspirer-framework = {path = "../../inspirer-framework"}
jsonwebtoken = "9"
sea-orm = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
utoipa = {workspace = true}
utoipa-swagger-ui = {workspace = true}
uuid = {workspace = true}
