[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "inspirer-auth"
version = "0.1.0"

[[bin]]
name = "inspirer-auth"
path = "src/bin/server.rs"

[dependencies]
argon2 = {version = "0.5.3", features = ["std"]}
async-trait = {workspace = true}
axum-extra = {workspace = true}
axum-login = "0.15.1"
chrono = {workspace = true}
chrono-tz = {workspace = true}
clap = {workspace = true}
crypto-utils = {path = "../../crypto-utils"}
eyre = {workspace = true}
headers = "0.4.0"
inspirer-framework = {path = "../../inspirer-framework"}
jsonwebtoken = "9"
openidconnect = "3.5.0"
phonenumber = "0.3.4"
rand = {workspace = true}
sea-orm = {workspace = true}
serde = {workspace = true}
serde-enum-str = "0.4.0"
serde_json = {workspace = true}
tower-sessions-redis-store = "0.12.0"
tracing = {workspace = true}
url = {workspace = true}
utoipa = {workspace = true}
utoipa-swagger-ui = {workspace = true}
uuid = {workspace = true}
